# Spark-corefw

./: .gitignore  README.md  build.sh  format_all.sh  spec.md  test.ps1  west.yml
app/: CMakeLists.txt  Kconfig  prj.conf
app/src/: comm.c  comm.h  comm_raw.c  comm_raw.h  console_utils.c  console_utils.h  gcode.c  gcode.h  gcode_base.c  main.c  motion.c  motion.h  motion_base.c  motion_base.h  motor.c  motor.h  pulser.c  pulser.h  settings.c  settings.h  strutil.c  strutil.h  system.c  system.h  tmc2209.c  tmc2209.h  uart1wire.c  uart1wire.h  wirefeed.c  wirefeed.h
boards/btt/octopus_pro/: Kconfig.octopus_pro  board.cmake  board.yml  octopus_pro.dts  octopus_pro.yaml  octopus_pro_defconfig
boards/btt_octopus_pro/: octopus_pro.dts  octopus_pro_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/motor/: CMakeLists.txt  Kconfig  tmc2209.c  uart1wire.c  uart1wire.h
dts/bindings/motor/: adi,tmc2209-uart.yaml
include/drivers/: tmc_driver.h
spec/: gcode.md  protocol.md  settings.md
tests/app/: CMakeLists.txt  prj.conf  testcase.yaml
tests/app/src/: gcode_base_test.c  gcode_test.c  motion_base_test.c  strutil_test.c
zephyr/: module.yml
